crates/carta/tests/snapshots/golden_writer__ipynb__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "x[1] y[2]\n",
    "\n",
    "[1] first\n",
    "\n",
    "[2] second"
   ],
   "id": "d37e80eb-e8c1-4220-91ec-a7c3e5ed9350"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
