crates/carta/tests/snapshots/golden_writer__ipynb__common__header-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "# Titled"
   ],
   "id": "93384150-e135-4144-8357-b9aebf00a0d8"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
