crates/carta/tests/snapshots/golden_writer__ipynb__common__header-unnumbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "# Hidden"
   ],
   "id": "9814b1bb-1f31-4d46-896a-6a406394f98c"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
