crates/carta/tests/snapshots/golden_writer__ipynb__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "![alt](https://example.org/i.png)"
   ],
   "id": "1da28b67-69ef-442c-8da7-87bdf07c60a8"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
