crates/carta/tests/snapshots/golden_writer__ipynb__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "an ![alt words](pic.png) inline"
   ],
   "id": "b70ec1a5-6222-43e2-afd3-051d8e55db18"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
