crates/carta/tests/snapshots/golden_writer__ipynb__common__inline-code-backtick.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "use `` a `b` c `` here"
   ],
   "id": "3dc20303-df91-4bf2-829f-fc9d2e95b3f4"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
