crates/carta/tests/snapshots/golden_writer__ipynb__common__inline-code.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "a `let x = 1;` b"
   ],
   "id": "88e36976-e8e5-44f8-9ff4-56e0557e1da0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
