crates/carta/tests/snapshots/golden_writer__ipynb__common__line-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "first line  \n",
    "second line"
   ],
   "id": "899319e7-15db-4769-a16d-aca91f519218"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
