crates/carta/tests/snapshots/golden_writer__ipynb__common__link-autolink.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "<http://example.com>"
   ],
   "id": "c5b2703f-1257-4d3c-8889-d6007c729bf8"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
